--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -80,13 +80,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "Determining reference file..."
-          REPO_OWNER=$(gh pr view ${{ github.event.pull_request.number }} --json headRepository -q '.headRepository.owner.login')
-          E=$(gh pr view ${{ github.event.pull_request.number }} --json headRepository -q '.headRepository.owner')
-          F=$(gh pr view ${{ github.event.pull_request.number }} --json headRepository -q '.headRepository')
-          D=$(gh pr view ${{ github.event.pull_request.number }} --json headRepository)
-          echo $E
-          echo $F
-          echo $D
+          REPO_OWNER=$(gh pr view ${{ github.event.pull_request.number }} --json headRepository -q '.author.login')
           REPO_NAME=$(gh pr view ${{ github.event.pull_request.number }} --json headRepository -q '.headRepository.name')
           BRANCH=$(gh pr view ${{ github.event.pull_request.number }} --json headRefName -q '.headRefName')
 
