--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       issues: write # Allow posting comments on issues/PRs
-      pull-requests: write # Allow posting comments on issues/PRs
+      pull-requests: write
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
@@ -58,17 +58,11 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "Fetching PR changed files..."
-
-          # gh repo view "${{ github.event.pull_request.head.repo.full_name }}" --branch "${{ steps.get-pr-data.outputs.branch }}"
-
-          # gh repo set-default "${{ github.event.pull_request.head.repo.full_name }}" # Set the fork repository as default
-
-          # Fetch the list of changed files in the PR
           echo "Getting list of changed files from PR..."
           gh pr view ${{ steps.get-pr-data.outputs.pr_number }} --json files -q ".files[].path" | grep -E '^src/main/resources/messages_[a-zA-Z_]+\.properties$' > changed_files.txt # Filter only matching property files
 
       - name: Determine reference file test
-        id: determine-file-1
+        id: determine-file
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
@@ -126,7 +120,6 @@ jobs:
               });
 
               const content = Buffer.from(fileContent.content, "base64").toString("utf-8");
-              console.log(content)
               const filePath = path.join(tempDir, file);
               const dirPath = path.dirname(filePath);
 
@@ -160,8 +153,8 @@ jobs:
             } else {
               console.log("Using main branch reference file.");
               const { data: fileContent } = await github.rest.repos.getContent({
-                owner: "Ludy87",
-                repo: "test_java",
+                owner: repoOwner,
+                repo: repoName,
                 path: "src/main/resources/messages_en_GB.properties",
                 ref: "main",
               });
@@ -215,13 +208,13 @@ jobs:
           script: |
             const { GITHUB_REPOSITORY, SCRIPT_OUTPUT } = process.env;
             const [repoOwner, repoName] = GITHUB_REPOSITORY.split('/');
-            const prNumber = context.issue.number;
+            const issueNumber = context.issue.number;
 
             // Find existing comment
             const comments = await github.rest.issues.listComments({
               owner: repoOwner,
               repo: repoName,
-              issue_number: prNumber
+              issue_number: issueNumber
             });
 
             const comment = comments.data.find(c => c.body.includes("## 🚀 Translation Verification Summary"));
@@ -243,7 +236,7 @@ jobs:
               await github.rest.issues.createComment({
                 owner: repoOwner,
                 repo: repoName,
-                issue_number: prNumber,
+                issue_number: issueNumber,
                 body: `## 🚀 Translation Verification Summary\n\n\n${SCRIPT_OUTPUT}\n`
               });
               console.log("Created new comment.");
