--- a/.github/workflows/multiOSReleases.yml
+++ b/.github/workflows/multiOSReleases.yml
@@ -94,7 +94,7 @@ jobs:
         enable_security: [true, false]
         include:
           - enable_security: true
-            file_suffix: "-with-login"
+            file_suffix: "with-login-"
           - enable_security: false
             file_suffix: ""
     steps:
@@ -106,7 +106,7 @@ jobs:
       - name: Download build artifacts
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
-          name: stirling${{ matrix.file_suffix }}-binaries
+          name: stirling-${{ matrix.file_suffix }}binaries
 
       - name: Display structure of downloaded files
         run: ls -R
@@ -122,55 +122,54 @@ jobs:
           cosign sign-blob \
             --key ./cosign.key \
             --yes \
-            --output-signature ./win-Stirling-PDF-no-install-Server${{ matrix.file_suffix }}-${{ needs.read_versions.outputs.version }}.exe.sig \
-            ./win-Stirling-PDF-no-install-Server${{ matrix.file_suffix }}-${{ needs.read_versions.outputs.version }}.exe
+            --output-signature ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe.sig \
+            ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe
 
           cosign attest-blob \
             --predicate - \
             --key ./cosign.key \
             --yes \
-            --output-attestation ./win-Stirling-PDF-no-install-Server${{ matrix.file_suffix }}-${{ needs.read_versions.outputs.version }}.exe.intoto.jsonl \
-            ./win-Stirling-PDF-no-install-Server${{ matrix.file_suffix }}-${{ needs.read_versions.outputs.version }}.exe
+            --output-attestation ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe.intoto.jsonl \
+            ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe
 
           cosign verify-blob \
             --key ./cosign.pub \
-            --signature ./win-Stirling-PDF-no-install-Server${{ matrix.file_suffix }}-${{ needs.read_versions.outputs.version }}.exe.sig \
-            ./win-Stirling-PDF-no-install-Server${{ matrix.file_suffix }}-${{ needs.read_versions.outputs.version }}.exe
+            --signature ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe.sig \
+            ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe
 
       - name: Upload signed artifacts
         uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
         with:
-          name: stirling-signed${{ matrix.file_suffix }}
-          path: |
-            ./win-Stirling-PDF-no-install-Server${{ matrix.file_suffix }}-${{ needs.read_versions.outputs.version }}.*
+          name: ${{ matrix.file_suffix }}signed
+          path: ./*
 
-  release-no-install:
-    needs: [read_versions, sign_verify-no-install]
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    strategy:
-      matrix:
-        enable_security: [true, false]
-        include:
-          - enable_security: true
-            file_suffix: "-with-login"
-          - enable_security: false
-            file_suffix: ""
-    steps:
-      - name: Download signed artifacts
-        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
-        with:
-          name: stirling-signed${{ matrix.file_suffix }}
+  # release-no-install:
+  #   needs: [read_versions, sign_verify-no-install]
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: write
+  #   strategy:
+  #     matrix:
+  #       enable_security: [true, false]
+  #       include:
+  #         - enable_security: true
+  #           file_suffix: "with-login-"
+  #         - enable_security: false
+  #           file_suffix: ""
+  #   steps:
+  #     - name: Download signed artifacts
+  #       uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
+  #       with:
+  #         name: ${{ matrix.file_suffix }}signed
 
-      - name: Display structure of downloaded files
-        run: ls -R
+  #     - name: Display structure of downloaded files
+  #       run: ls -R
 
-      - name: Upload binaries, attestations and signatures to Release and create GitHub Release
-        uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974 # v2.1.0
-        with:
-          tag_name: v${{ needs.read_versions.outputs.version }}
-          generate_release_notes: true
+  #     - name: Upload binaries, attestations and signatures to Release and create GitHub Release
+  #       uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974 # v2.1.0
+  #       with:
+  #         tag_name: v${{ needs.read_versions.outputs.version }}
+  #         generate_release_notes: true
           # files: |
           #   ./libs/Stirling-PDF*
           #   ./launch4j/Stirling-PDF-Server*
@@ -317,7 +316,7 @@ jobs:
             ./${{ matrix.platform }}Stirling-PDF${{ matrix.extra }}-${{ needs.read_versions.outputs.version }}.*
 
   release:
-    needs: [read_versions, sign_verify]
+    needs: [read_versions, sign_verify, sign_verify-no-install]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -333,6 +332,12 @@ jobs:
           - os: ubuntu
             extra: ""
             platform: linux-
+          - os: stirling-without-login
+            extra: ""
+            platform: ""
+          - os: stirling-with-login
+            extra: ""
+            platform: "with-login-"
     steps:
       - name: Download signed artifacts
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
@@ -345,5 +350,4 @@ jobs:
         with:
           tag_name: v${{ needs.read_versions.outputs.version }}
           generate_release_notes: true
-          files: |
-            ./${{ matrix.platform }}Stirling-PDF${{ matrix.extra }}-${{ needs.read_versions.outputs.version }}.*
+          files: ./*
