--- a/.github/workflows/multiOSReleases.yml
+++ b/.github/workflows/multiOSReleases.yml
@@ -169,7 +169,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     permissions:
       contents: write
-      packages: write
+      # packages: write
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
